Episode 10: Further refactored Twitch4J adapter code by moving it into the "triggering" sub-package.