@@ -79,10 +79,33 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.3</version>
+        <configuration>
+          <source>13</source>
+          <target>13</target>
+          <release>13</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+          <options>
+            <option>--enable-preview</option>
+          </options>
+          <mainClass>com.jitterted.jittershout.JitterShoutOutBot</mainClass>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>13</version>
+    </dependency>
     <dependency>
       <groupId>com.github.twitch4j</groupId>
       <artifactId>twitch4j</artifactId>
@@ -101,6 +124,7 @@
       <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
+
 
     <!-- this is all you need to write tests with JUnit Jupiter -->
     <dependency>
